Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -169,7 +169,6 @@ body.edit { /* border for logo on editor */
 .widget {
     &.extendednavigation {
         display: block;
-        float: right;
         padding: 0;
         @media @tablet {
             float: none;
